[package]
name = "practise_rust"
version = "0.1.0"
edition = "2021"
authors = ["The Rust Project practise", "Istvan Varga<iv.istvan.varga@gmail.com>"]
license = "MIT OR Apache-2.0"

[lib]
name = "practise_rust"
path = "src/lib.rs"
test = true  

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
